--- a/Code/Frontend/edit.html
+++ b/Code/Frontend/edit.html
@@ -91,6 +91,12 @@
 										</svg>
 									</a>
 								</div>
+								<div class="c-trashcan__poweroff u-1-of-5 js-poweroff">
+									<svg class="c-trashcan__poweroff-symbol" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+										<path d="M0 0h24v24H0V0z" fill="none" />
+										<path d="M10 3H8v1.88l2 2zm6 6v3.88l1.8 1.8.2-.2V9c0-1.1-.9-2-2-2V3h-2v4h-3.88l2 2H16zM4.12 3.84L2.71 5.25 6 8.54v5.96L9.5 18v3h5v-3l.48-.48 4.47 4.47 1.41-1.41L4.12 3.84zm8.38 13.33V19h-1v-1.83L8 13.65v-3.11l5.57 5.57-1.07 1.06z" fill="#3f6474" />
+									</svg>
+								</div>
 							</div>
 						</div>
 
@@ -113,6 +119,12 @@
 										</svg>
 									</a>
 								</div>
+								<div class="c-trashcan__poweroff u-1-of-5 js-poweroff">
+									<svg class="c-trashcan__poweroff-symbol" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+										<path d="M0 0h24v24H0V0z" fill="none" />
+										<path d="M10 3H8v1.88l2 2zm6 6v3.88l1.8 1.8.2-.2V9c0-1.1-.9-2-2-2V3h-2v4h-3.88l2 2H16zM4.12 3.84L2.71 5.25 6 8.54v5.96L9.5 18v3h5v-3l.48-.48 4.47 4.47 1.41-1.41L4.12 3.84zm8.38 13.33V19h-1v-1.83L8 13.65v-3.11l5.57 5.57-1.07 1.06z" fill="#3f6474" />
+									</svg>
+								</div>
 							</div>
 						</div>
 
@@ -134,6 +146,12 @@
 											<path id="Path_43" data-name="Path 43" d="M16,9V19H8V9h8M14.5,3h-5l-1,1H5V6H19V4H15.5ZM18,7H6V19a2.006,2.006,0,0,0,2,2h8a2.006,2.006,0,0,0,2-2Z" fill="#3f6474" />
 										</svg>
 									</a>
+								</div>
+								<div class="c-trashcan__poweroff u-1-of-5 js-poweroff">
+									<svg class="c-trashcan__poweroff-symbol" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+										<path d="M0 0h24v24H0V0z" fill="none" />
+										<path d="M10 3H8v1.88l2 2zm6 6v3.88l1.8 1.8.2-.2V9c0-1.1-.9-2-2-2V3h-2v4h-3.88l2 2H16zM4.12 3.84L2.71 5.25 6 8.54v5.96L9.5 18v3h5v-3l.48-.48 4.47 4.47 1.41-1.41L4.12 3.84zm8.38 13.33V19h-1v-1.83L8 13.65v-3.11l5.57 5.57-1.07 1.06z" fill="#3f6474" />
+									</svg>
 								</div>
 							</div>
 						</div>
